fix: remove extra spacing for forms and subforms

--- a/scripts/src/form/form.scss
+++ b/scripts/src/form/form.scss
@@ -116,7 +116,6 @@
     button[type=submit] {
         margin-top: 15px;
     }
-    margin: 10px 0px;
 
     .field-array .array-item:first-child .array-item-remove {
         // display: none;
